<resources>
    <string name="app_name">CityQuest</string>

    <string name="authorize">Авторизация</string>
    <string name="login_btn">Войти</string>
    <string name="password_hint">Пароль</string>
    <string name="login_hint">Имя</string>
    <string name="question">Вопрос:</string>
    <string name="answer">Ответ:</string>
    <string name="hint_question">Помощь:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_menu_stats">Статистика</string>
    <string name="nav_menu_point">Вопрос</string>
    <string name="nav_menu_options">Настройка</string>
    <string name="nav_menu_payment">Оплата</string>
    <string name="nav_menu_exit">Выход</string>
    <string name="answerBtn">Ответить</string>
    <string name="toolbar_map">Карта</string>
    <string name="welcome_message">Добро пожаловать, </string>
    <string name="auth_failure">Такого пользователя не существует, проверьте данные</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Register">Регистрация</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="birthdate">Дата рождения</string>
    <string name="email">Email</string>

    <string name="yes">Да, выйти</string>
    <string name="cancel">Отмена</string>
    <string name="exit_text">Вы уверены, что хотите выйти?</string>

    <string name="loading">Загрузка...</string>
    <string-array name="languages_array">
        <item>Русский</item>
        <item>English</item>
        <item>Deutsch</item>
    </string-array>

</resources>
