<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundTransparent"
    android:gravity="center"
    android:layout_gravity="center">


    <EditText
            android:id="@+id/edit_user"
            android:hint="@string/login_hint"
            android:layout_height="wrap_content"
            android:background="@color/backgroundLight"
            android:inputType="text"
            android:saveEnabled="true"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="26dp"
            style="@style/FullLineText"
        android:maxLines="1">
        </EditText>

    <Button
        android:id="@+id/button_register_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        style="@style/ButtonStyle"
        android:onClick="Login"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backBtn"
        style="@style/ButtonStyle"
        android:onClick="Register"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Register"
        android:textStyle="bold"
        android:textColor="@color/textElementLight"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textAlignment="viewEnd" />

    <EditText
        android:id="@+id/edit_email"
        android:hint="@string/email"
        android:layout_height="wrap_content"
        android:background="@color/backgroundLight"
        android:inputType="textEmailAddress"
        android:saveEnabled="true"
        android:layout_width="match_parent"
        style="@style/FullLineText"
        android:layout_below="@+id/edit_user"
        android:layout_alignParentStart="true"
        android:maxLines="1">
    </EditText>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@color/backgroundLight"
        style="@style/FullLineText"
        android:layout_below="@+id/edit_email"
        android:layout_alignParentStart="true"
        android:maxLines="1" />

    <EditText
    android:id="@+id/edit_password_confirm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:inputType="textPassword"
    android:background="@color/backgroundLight"
        style="@style/FullLineText"
        android:hint="@string/confirm_password"
        android:layout_below="@+id/edit_password"
        android:layout_alignParentEnd="true"
        android:maxLines="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        style="@style/FullLineText"
        android:maxLines="1"
        android:layout_below="@+id/edit_password_confirm"
        android:layout_alignParentStart="true"
        android:id="@+id/editText"
        android:layout_alignParentEnd="true"
        android:hint="@string/birthdate" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />


</RelativeLayout>
