<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="22dp"
        android:background="@android:color/background_light"
        android:layout_below="@+id/edit_user"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onLogin (Login)"
        android:text="@string/login_btn"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_below="@+id/edit_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/edit_user"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        android:background="@android:color/background_light"
        android:inputType="text"
        android:saveEnabled="true"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/authorize"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginBottom="37dp"
        android:layout_above="@+id/edit_user"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
