<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="a1.SPbRun2.MainLogin"
    android:id="@+id/main_activity_layout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_layout"
        android:background="@color/backgroundTransparent"
        tools:context="a1.SPbRun2.fragment.LoginFragment"
        android:weightSum="1"


     >


        <TextView
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/authorize"
            android:textStyle="bold"
            android:textColor="@color/textElementLight"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <EditText
                android:id="@+id/edit_user"
                android:hint="@string/login_hint"
                android:background="@color/backgroundLight"
                android:inputType="text"
                android:saveEnabled="true"
                android:layout_width="match_parent"
                style="@style/FullLineText"
                android:layout_height="wrap_content">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:background="@color/backgroundLight"
                style="@style/FullLineText" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <Button
                android:text="@string/Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerBtn"
                style="@style/ButtonStyle"
                android:onClick="Register"
                android:layout_weight="0.84" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn"
                style="@style/ButtonStyle"
                android:layout_weight="3.84" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>