<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pointLabel"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/question"
        android:textColor="@color/textStandard" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/FullLineText"
            android:layout_width="match_parent"
            android:ems="10"
            android:id="@+id/point"
            android:layout_below="@+id/pointLabel"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="none" />
    </LinearLayout>

    <TextView
        android:text="@string/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/answerLabel"
        android:textSize="18sp"
        android:layout_below="@+id/point"
        android:layout_alignParentStart="true"
        android:textColor="@color/textStandard" />

    <EditText style="@style/FullLineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/answer"
        android:layout_below="@+id/answerLabel"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/hint_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/HintLabel"
        android:textSize="18sp"
        android:layout_below="@+id/answer"
        android:layout_alignParentStart="true"
        android:textColor="@color/textStandard" />


    <EditText style="@style/FullLineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Hint1"
        android:enabled="false"
        android:inputType="none"
        android:layout_below="@+id/HintLabel"
        android:layout_alignParentStart="true" />

    <EditText style="@style/FullLineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:id="@+id/Hint3"
        android:enabled="false"
        android:layout_below="@+id/Hint2"
        android:layout_alignParentEnd="true" />



    <EditText style="@style/FullLineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:id="@+id/Hint2"
        android:enabled="false"
        android:layout_below="@+id/Hint1"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendBtn"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/answerBtn"
        android:foregroundGravity="center_horizontal"
        android:visibility="visible"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/Hint3"
        android:layout_centerHorizontal="true" />
</LinearLayout>