<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    android:paddingStart="72dp"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Help"
        android:layout_alignStart="@+id/Help"
        android:id="@+id/editText4"
        android:layout_alignParentEnd="true"
        android:paddingTop="@dimen/empty_space_between"
        android:focusable="false"
        android:focusableInTouchMode="false"
        style="@style/Widget.AppCompat.EditText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:inputType="text"
        android:lines="@integer/cast_libraries_material_featurehighlight_pulse_base_alpha"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:paddingTop="@dimen/empty_space_between"
        android:layout_below="@+id/editText4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/hint_3"
        android:paddingTop="@dimen/empty_space_between"
        android:layout_below="@+id/editText5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/question_edit"
        android:inputType="none"
        android:lines="3"
        android:paddingTop="@dimen/empty_space_between"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/question"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/question"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/question_edit" />

    <TextView
        android:text="@string/hint_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Help"
        android:paddingTop="@dimen/empty_space_between"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/answer_"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/answer_"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/answer" />

    <TextView
        android:text="@string/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer"
        android:paddingTop="@dimen/empty_space_between"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/question_edit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="карта"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toMap"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="toMap" />

    <Button
        android:text="@string/answerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendAnswer"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/hint_3"
        android:layout_toEndOf="@+id/toMap" />


</RelativeLayout>
